# aas2openapi

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  aas_data.json  app.py  app_creator.py  basyx-compose.yaml  data.json  data_and_schema.json  docker-compose-dev.yaml  docker-compose-ui.yaml  docker-compose.yaml  docker_app.py  examplaaaa.json  example_conversion.py  example_creation.py  model.json  models.json  pyproject.toml  resulter.json  test.py  test_aas_loading.py  test_conversion.py  test_optional_field.py  test_qraphql.py  working_app_creator.py
aas2openapi/: __init__.py
aas2openapi/client/: aas_client.py  submodel_client.py
aas2openapi/convert/: convert_aas.py  convert_pydantic.py
aas2openapi/middleware/: __init__.py  graphql_routers.py  middleware.py  model_registry_api.py  register_model_api.py  rest_routers.py
aas2openapi/models/: __init__.py  base.py  order.py  performance.py  procedure.py  processes.py  product.py  resources.py  source.py  state.py  timemodel.py
aas2openapi/util/: client_utils.py  convert_util.py  logging_util.py
aas_middleware/: core.py
aas_middleware/connectors/: http_polling_connector.py  http_request_connector.py  web_hook_client_connector.py  web_hook_server_connector.py  web_socket_client_connector.py  web_socket_server_connector.py
aas_middleware/consumers/: consumers.py
aas_middleware/persistence/: __init__.py
aas_middleware/providers/: base_provider.py
ba-syx-aas-repository-client/: README.md  pyproject.toml
ba-syx-aas-repository-client/ba_syx_aas_repository_client/: __init__.py
ba-syx-aas-repository-client/ba_syx_aas_repository_client/models/: __init__.py  administrative_information.py  asset_administration_shell.py  asset_information.py  asset_information_asset_kind.py  base_64_url_encoded_cursor.py  data_specification_content.py  embedded_data_specification.py  extension.py  extension_value_type.py  get_all_asset_administration_shells_limit.py  get_all_submodel_references_aas_repository_limit.py  key_type.py  lang_string_name_type.py  lang_string_text_type.py  paged_result.py  paged_result_paging_metadata.py  reference.py  (+7 more)
ba-syx-submodel-repository-client/: README.md  pyproject.toml
ba-syx-submodel-repository-client/ba_syx_submodel_repository_client/: __init__.py
docker/: Dockerfile  aas-env.properties  docker-compose-ui.yaml  docker-compose.yaml  docker_app.py
examples/: aas_middleware_workflow_example.py  app.py  boolean_test.py  example_conversion.py  example_creation.py  example_json_dynamic_model.json  example_json_model.json  generated_aas_and_submodels_from_models.json  graphene_pydantic_test.py  graphene_testing.py  minimal_example.py  simple_aas_and_submodels.json  test_example.py  workflow_decorator.py
examples/models/: product.py
test/: conftest.py
(+91 files in other folders)
